--- a/src/components/Profile/Home/Home.css
+++ b/src/components/Profile/Home/Home.css
@@ -1,14 +1,5 @@
-.title{
-    font-size: 2.5rem;
-    color: rgb(72, 70, 70);
-}
-
-.tagline{
-    font-size: 1.3rem;
-}
-
 .progress{
-    margin: 4rem 0;
+    margin-top: -3rem;
 }
 
 h2{
